--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -336,13 +336,14 @@ border-radius: 50px;
 .opdracht8{
     width: 70%; 
     height: 490px; 
-     background-image: url("../images/mainimg.jpg");
+    background-image: url("../images/mainimg.jpg");
     background-position: 20% 30%; 
     background-size: 80% 60%; 
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-clip: border-box;
     position: relative;
+ 
  }
  .opdracht8 h4{ 
     color: black; 
@@ -366,7 +367,19 @@ border-radius: 50px;
     padding: 5px;
     position: absolute;
   }
-
+.under{
+    font-size: 0; 
+    height: 30px; 
+    width: 50%; 
+    background-color: white; 
+    padding: 10px; 
+    text-align: right; 
+    float: right; 
+    clear: left; 
+   margin-top: 40px; 
+   margin-left: 80px; 
+   
+}
 
 /* footer styling*/
 
