--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -895,6 +895,41 @@ to{
     transform: rotate(0360deg);
 }
 }
+/*opdracht 6 the cards */ 
+.card_container{
+    width: auto; 
+    background-color: aquamarine;
+    height: 600px;
+    border: 2px solid magenta; 
+    box-sizing: border-box;
+      
+}
+.op66{
+    display: inline-block;
+    width: 250px;
+    height: 350px;
+     background-color: yellow;
+    border: 2px solid hotpink;
+    border-radius: 20px;
+   text-align: center;
+   margin-top: 10rem;  
+   margin-right: -8rem; 
+   transition: all 1s ease-in; 
+}
+
+.op66:hover{
+ background-color: magenta;
+ color: snow;
+ font-size: 32px;
+ font-weight: bold;
+ text-decoration: underline;
+ transform: translate(-50px, -80px);
+ right: 30px;
+ z-index: 2;
+}
+.op66:first-of-type{ 
+    margin-left: 8rem; 
+}
 
 
 /* footer styling*/
